--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Cr2Systems-Client1.conf
 export-token-0x62f03b52c377fea3eb71d451a95ad86c818755d1 (1).csv
 export-token-0x62f03b52c377fea3eb71d451a95ad86c818755d1.csv
 .DS_Store
+.DS_Store
+.DS_Store
